// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsersEdit /> should render properly loading 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-7 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-6 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-4 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-7"
  >
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Invite User(s)
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-4"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/fe39c66b-68f8-4d59-adfd-395f6baaf72c/edit"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Edit User
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
}

<div
    className="emotion-0"
  >
    Loading...
  </div>,
]
`;

exports[`<ProjectUsersEdit /> should render properly with a user and permissions 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-7 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-6 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-4 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-7"
  >
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Invite User(s)
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-4"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/fe39c66b-68f8-4d59-adfd-395f6baaf72c/edit"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Edit User
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-3 {
  padding: 8px;
}

.emotion-2 {
  padding: 12px;
}

.emotion-1 {
  height: 20px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-6 button,
.emotion-6 a {
  margin-right: 16px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #808080;
}

.emotion-4:hover {
  opacity: 0.5;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  background-color: #73b61c;
}

.emotion-5:hover {
  background-color: #96c955;
}

.emotion-5[aria-disabled=true] {
  background-color: #808080;
}

<form
    action=""
    className="emotion-7"
    method="post"
    onSubmit={[Function]}
  >
    <h3
      className="emotion-0"
    >
      Email: 
      jane@zorroa.com
    </h3>
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-1"
        />
      </div>
    </div>
    <CheckboxGroup
      iconVariant="PRIMARY"
      legend="Edit Permissions"
      onClick={[Function]}
      options={
        Array [
          Object {
            "icon": "",
            "initialValue": false,
            "key": "SystemMonitor",
            "label": " System Monitor",
            "legend": "Allows access to monitoring endpoints",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "SystemManage",
            "label": " System Manage",
            "legend": "Allows access to platform management endpoints",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "SystemProjectOverride",
            "label": " System Project Override",
            "legend": "Provides ability to switch projects",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "SystemProjectDecrypt",
            "label": " System Project Decrypt",
            "legend": "Provides ability to view encrypted project data",
          },
          Object {
            "icon": "",
            "initialValue": true,
            "key": "ApiKeyManage",
            "label": " Api Key Manage",
            "legend": "Provides ability to manage API keys",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "AssetsRead",
            "label": " Assets Read",
            "legend": "Provides ability to read assets and associated files",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "AssetsImport",
            "label": " Assets Import",
            "legend": "Provides ability to import assets. (created and update)",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "AssetsDelete",
            "label": " Assets Delete",
            "legend": "Provides ability to remove assets",
          },
          Object {
            "icon": "",
            "initialValue": true,
            "key": "ProjectManage",
            "label": " Project Manage",
            "legend": "Provides ability to manage projects.",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "ProjectCreate",
            "label": " Project Create",
            "legend": "Provides ability to create projects.",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "ProjectFilesRead",
            "label": " Project Files Read",
            "legend": "Provides ability to read project files from cloud storage.",
          },
          Object {
            "icon": "",
            "initialValue": false,
            "key": "ProjectFilesWrite",
            "label": " Project Files Write",
            "legend": "Provides ability to store project files in cloud storage.",
          },
        ]
      }
      variant="PRIMARY"
    />
    <div
      className="emotion-6"
    >
      <a
        className="emotion-4"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cancel
      </a>
      <button
        className="emotion-5"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>,
]
`;
